--- a/cluster.yaml
+++ b/cluster.yaml
@@ -1,7 +1,7 @@
 apiVersion: "clickhouse.altinity.com/v1"
 kind: "ClickHouseInstallation"
 metadata:
-  name: "herc"
+  name: "alldata"
 spec:
   # Templates are specified for all clusters ... if you want explicitly for each cluster then apply below
   defaults:
@@ -11,7 +11,7 @@ spec:
       logVolumeClaimTemplate: data-volume-clickhouse
   configuration:
     clusters:
-      - name: "herc-cluster"
+      - name: "alldata-cluster"
         layout:
           shardsCount: 2
           replicasCount: 2
